--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "test": "jest",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix . && prettier --write ."
+    "lint:fix": "eslint --fix . && prettier --write .",
+    "test": "jest",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cy:run",
+    "test:all": "npm run lint && npm run test && npm run test:e2e"
   },
   "keywords": [],
   "author": "zorkham",
@@ -24,15 +28,20 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
+    "@badeball/cypress-cucumber-preprocessor": "^21.0.2",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.3",
     "@types/alpinejs": "^3.13.10",
     "@types/alpinejs__persist": "^3.13.4",
+    "@types/cypress": "^1.1.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.8.2",
+    "cypress": "^13.15.1",
     "eslint": "^9.13.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
+    "start-server-and-test": "^2.0.8",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "vite": "^5.4.10"
